# HyperLandmark

Prj-Android/: build.gradle  local.properties
Prj-Android/app/: .gitignore  build.gradle
Prj-Android/app/src/main/: AndroidManifest.xml
Prj-Android/app/src/main/java/zeusees/tracking/: FaceTracking.java
Prj-Android/app/src/main/res/layout/: activity_main.xml
Prj-Android/gradle/wrapper/: gradle-wrapper.properties
qAutoStereo_20190430/: .gitignore  gradle.properties  settings.gradle
qAutoStereo_20190430/demoplayer/: build.gradle  proguard-rules.pro
qAutoStereo_20190430/demoplayer/src/main/: AndroidManifest.xml
qAutoStereo_20190430/demoplayer/src/main/java/com/tdim/demoplayer/: AdjustActivity.java  MainActivity.java  MirrorActivity.java
qAutoStereo_20190430/demoplayer/src/main/res/layout/: activity_adjust.xml  activity_main.xml  activity_mirror.xml
qAutoStereo_20190430/demoplayer/src/main/res/raw/: clt_al00.qasc  hi9air.qasc  hi9pro.qasc  hma_tl00.qasc  mar_al00.qasc  mi9.qasc  mi_8.qasc  pbbm00.qasc  pbem00.qasc  pcam00.qasc  pct_al10.qasc  redmi_note_5.qasc  redmi_note_7.qasc  samsung_sm_a9200_.qasc  sm_g8870.qasc  v1813ba.qasc  v1838a.qasc  vce_al00.qasc
qAutoStereo_20190430/demoplayer/src/main/res/values/: strings.xml
qAutoStereo_20190430/gradle/wrapper/: gradle-wrapper.properties
qAutoStereo_20190430/qCalibration/: build.gradle
qAutoStereo_20190430/qCalibration/src/main/: AndroidManifest.xml
qAutoStereo_20190430/qCalibration/src/main/java/com/tdim/qCalibration/: InitTask.java  MainActivity.java  ManagmentDialog.java  RepeatListener.java  SaveDialog.java  SplashActivity.java
qAutoStereo_20190430/qCalibration/src/main/res/layout/: activity_main.xml  activity_splash.xml  dialog_pgmgmt.xml  dialog_save.xml  item_pgmgmt.xml
qAutoStereo_20190430/qCalibration/src/main/res/values/: colors.xml  strings.xml
qAutoStereo_20190430/qCalibration/src/main/res/values-zh-rCN/: strings.xml
qAutoStereo_20190430/qas/: CMakeLists.txt  build.gradle  doc_ASPlaybackView.txt
qAutoStereo_20190430/qas/src/main/: AndroidManifest.xml
qAutoStereo_20190430/qas/src/main/cpp/: CMakeLists.txt  JNI_FaceDetectorBTK.c
qAutoStereo_20190430/qas/src/main/cpp/btk/b_BitFeatureEm/: ScanDetector.c  fflog.h
qAutoStereo_20190430/qas/src/main/java/com/tdim/qas/: ASAdjustmentView.java  ASCalibrationView.java  ASConstants.java  ASDetectionListener.java  ASDeviceReversedListener.java  ASLicensing.java  ASMirrorStream.java  ASPixelGeometry.java  ASPlaybackView.java  ASSettings.java  CalibratableRenderer.java  CalibrationRenderer.java  Camera2.java  CameraBase.java  CameraLegacy.java  FaceDetectorBTK.java  FaceDetectorBase.java  FaceDetectorFactory.java  FaceDetectorMV.java  PixelPitch.java  PlaybackRenderer.java  Renderer.java  RotatableSurfaceView.java  Util.java  VideoPlayer.java
qAutoStereo_20190430/qas/src/main/res/raw/: angl_f.glsl  bars_f.glsl  clrs_f.glsl  grid_f.glsl  grid_v.glsl  logo_f.glsl  logo_v.glsl  mix__0.glsl  mix__3.glsl  pict_f.glsl  rain_f.glsl  view_1.glsl  view_n.glsl  xy___v.glsl  xyst_v.glsl
qAutoStereo_20190430/qas/src/main/res/values/: constants.xml
qAutoStereo_20190430/stereoVideoPlayer-release/: build.gradle
(+3 files in other folders)
