set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

set(target qas-native)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/btk)

add_library(${target} SHARED
    JNI_FaceDetectorBTK.c
    btk/DCR.c
    btk/SDK.c
    btk/FaceFinder.c
    btk/b_APIEm/DCR.c 
    btk/b_APIEm/BFFaceFinder.c 
    btk/b_APIEm/FaceFinder.c 
    btk/b_APIEm/FaceFinderRef.c 
    btk/b_APIEm/Functions.c 
    btk/b_BasicEm/APh.c 
    btk/b_BasicEm/APhArr.c 
    btk/b_BasicEm/Complex.c  
    btk/b_BasicEm/ComplexArr.c  
    btk/b_BasicEm/Context.c  
    btk/b_BasicEm/DynMemManager.c  
    btk/b_BasicEm/Functions.c  
    btk/b_BasicEm/Int16Arr.c  
    btk/b_BasicEm/Int32Arr.c  
    btk/b_BasicEm/Int8Arr.c  
    btk/b_BasicEm/Math.c
    btk/b_BasicEm/MemSeg.c  
    btk/b_BasicEm/MemTbl.c  
    btk/b_BasicEm/Memory.c  
    btk/b_BasicEm/Phase.c  
    btk/b_BasicEm/String.c  
    btk/b_BasicEm/UInt16Arr.c  
    btk/b_BasicEm/UInt32Arr.c  
    btk/b_BasicEm/UInt8Arr.c  
    btk/b_BitFeatureEm/BitParam.c  
    btk/b_BitFeatureEm/Feature.c  
    btk/b_BitFeatureEm/Functions.c  
    btk/b_BitFeatureEm/I04Dns2x2Ftr.c  
    btk/b_BitFeatureEm/I04Dns2x4Ftr.c  
    btk/b_BitFeatureEm/I04Tld2x4Ftr.c  
    btk/b_BitFeatureEm/L01Dns2x4Ftr.c  
    btk/b_BitFeatureEm/L01Tld1x1Ftr.c  
    btk/b_BitFeatureEm/L01Tld2x4Ftr.c  
    btk/b_BitFeatureEm/L04Dns2x2Ftr.c  
    btk/b_BitFeatureEm/L04Dns2x4Ftr.c  
    btk/b_BitFeatureEm/L04Dns3x3Ftr.c  
    btk/b_BitFeatureEm/L04Tld2x4Ftr.c  
    btk/b_BitFeatureEm/L06Dns3x3Ftr.c  
    btk/b_BitFeatureEm/L06Dns4x4Ftr.c  
    btk/b_BitFeatureEm/L06DnsNx4x4Ftr.c  
    btk/b_BitFeatureEm/LocalScanDetector.c  
    btk/b_BitFeatureEm/LocalScanner.c  
    btk/b_BitFeatureEm/ScanDetector.c  
    btk/b_BitFeatureEm/Scanner.c  
    btk/b_BitFeatureEm/Sequence.c  
    btk/b_ImageEm/APhImage.c  
    btk/b_ImageEm/ComplexImage.c  
    btk/b_ImageEm/Flt16Image.c  
    btk/b_ImageEm/Functions.c  
    btk/b_ImageEm/HistoEq.c  
    btk/b_ImageEm/UInt16ByteImage.c  
    btk/b_ImageEm/UInt16BytePyrImage.c  
    btk/b_ImageEm/UInt8Image.c  
    btk/b_ImageEm/UInt32Image.c  
    btk/b_ImageEm/UInt8PyramidalImage.c  
    btk/b_TensorEm/Alt.c  
    btk/b_TensorEm/Cluster2D.c  
    btk/b_TensorEm/Cluster3D.c  
    btk/b_TensorEm/CompactAlt.c  
    btk/b_TensorEm/CompactMat.c  
    btk/b_TensorEm/Flt16Alt2D.c  
    btk/b_TensorEm/Flt16Alt3D.c  
    btk/b_TensorEm/Flt16Mat2D.c  
    btk/b_TensorEm/Flt16Mat3D.c  
    btk/b_TensorEm/Flt16Vec.c  
    btk/b_TensorEm/Flt16Vec2D.c  
    btk/b_TensorEm/Flt16Vec3D.c  
    btk/b_TensorEm/Functions.c  
    btk/b_TensorEm/IdCluster2D.c  
    btk/b_TensorEm/Int16Mat2D.c  
    btk/b_TensorEm/Int16Rect.c  
    btk/b_TensorEm/Int16Vec2D.c  
    btk/b_TensorEm/Int16Vec3D.c  
    btk/b_TensorEm/Int32Mat.c  
    btk/b_TensorEm/MapSequence.c  
    btk/b_TensorEm/Mat.c  
    btk/b_TensorEm/Normalizer.c  
    btk/b_TensorEm/RBFMap2D.c  
    btk/b_TensorEm/SubVecMap.c  
    btk/b_TensorEm/Uint32Rect.c  
    btk/b_TensorEm/VectorMap.c  
    )

target_link_libraries(${target} 
  android
  log
  )